--- a/app/questions.html
+++ b/app/questions.html
@@ -365,7 +365,7 @@
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
-                                            <i class="fa fa-bars"></i>
+                                            <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-body">
@@ -1319,6 +1319,10 @@
                                             <li><a href="#"><i class="fa fa-rss"></i></a></li>
                                         </ul>
                                     </div>
+
+                                    <p class="m-t-20 small hidden-xs">
+                                        Нашли опечатку? Выделите фрагмент и отправьте нажатием Ctrl+Enter.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1335,7 +1339,7 @@
                                 <li><a href="category.html">Гараж</a></li>
                                 <li><a href="questions.html">Вопрос-ответ</a></li>
                                 <li><a href="articles.html">Бортовой журнал</a></li>
-                            <li><a href="users.html">Пользователи</a></li>
+                                <li><a href="users.html">Пользователи</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -1364,8 +1368,8 @@
                                 <div class="input-group">
                                     <input type="text" placeholder="Введите email-адрес">
                                     <span class="input-group-button">
-                                <button class="button accent-button" type="button">Подписаться</button>
-                            </span>
+                                        <button class="button accent-button" type="button">Подписаться</button>
+                                    </span>
                                 </div>
                             </form>
                             <p class="small">
@@ -1380,6 +1384,10 @@
                             <div class="m-t-20 align-center-xs">
                                 <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
+
+                            <p class="m-t-20 small visible-xs">
+                                Нашли опечатку? Выделите фрагмент и отправьте нажатием Ctrl+Enter.
+                            </p>
                         </div>
                     </div>
                 </div>
