--- a/app/profile.html
+++ b/app/profile.html
@@ -365,7 +365,7 @@
                                     <div class="user pull-left dropdown">
                                         <a href="profile.html" class="dropdown-button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
-                                            <i class="fa fa-bars"></i>
+                                            <i class="fa fa-bars dropdown-arrow"></i>
                                         </a>
                                         <div class="dropdown-container">
                                             <div class="container-body">
@@ -834,6 +834,9 @@
                     <div class="widget widget-users white-section">
                         <div class="widget-title">
                             <h4 class="title">Друзья</h4>
+                            <a href="profile-friends.html" class="count">
+                                12
+                            </a>
                         </div>
                         <div class="items horisontal">
                             <div class="item user">
@@ -900,6 +903,9 @@
                         <hr>
                         <div class="widget-title">
                             <h4 class="title">Друзья онлайн</h4>
+                            <a href="profile-friends.html" class="count">
+                                1
+                            </a>
                         </div>
                         <div class="items horisontal">
                             <div class="item user">
@@ -943,6 +949,10 @@
                                             <li><a href="#"><i class="fa fa-rss"></i></a></li>
                                         </ul>
                                     </div>
+
+                                    <p class="m-t-20 small hidden-xs">
+                                        Нашли опечатку? Выделите фрагмент и отправьте нажатием Ctrl+Enter.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -959,7 +969,7 @@
                                 <li><a href="category.html">Гараж</a></li>
                                 <li><a href="questions.html">Вопрос-ответ</a></li>
                                 <li><a href="articles.html">Бортовой журнал</a></li>
-                            <li><a href="users.html">Пользователи</a></li>
+                                <li><a href="users.html">Пользователи</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -988,8 +998,8 @@
                                 <div class="input-group">
                                     <input type="text" placeholder="Введите email-адрес">
                                     <span class="input-group-button">
-                                <button class="button accent-button" type="button">Подписаться</button>
-                            </span>
+                                        <button class="button accent-button" type="button">Подписаться</button>
+                                    </span>
                                 </div>
                             </form>
                             <p class="small">
@@ -1004,6 +1014,10 @@
                             <div class="m-t-20 align-center-xs">
                                 <img src="/img/uploads/hit.png" alt="Счетчик, заменить на код счетчика">
                             </div>
+
+                            <p class="m-t-20 small visible-xs">
+                                Нашли опечатку? Выделите фрагмент и отправьте нажатием Ctrl+Enter.
+                            </p>
                         </div>
                     </div>
                 </div>
