Кнопки входа через социальные сети.

--- a/app/index.html
+++ b/app/index.html
@@ -158,6 +158,13 @@
                                     <a href="#" class="dropdown-button dropdown-arrow"><span>Войти</span></a>
                                     <div class="dropdown-container">
                                         <div class="container-body">
+                                            <div class="sign-in-social">
+                                                <a href="#" class="button default-button circle-button"><i class="fa fa-vk"></i></a>
+                                                <a href="#" class="button default-button circle-button"><i class="fa fa-facebook"></i></a>
+                                                <a href="#" class="button default-button circle-button"><i class="fa fa-twitter"></i></a>
+                                                <a href="#" class="button default-button circle-button"><i class="fa fa-odnoklassniki"></i></a>
+                                                <a href="#" class="button default-button circle-button"><i class="fa fa-google-plus"></i></a>
+                                            </div>
                                             <form action="#" id="sign-in-form">
                                                 <div class="form-group" title="Email или логин *">
                                                     <input name="login" type="text" placeholder="Email или логин *">
@@ -167,9 +174,9 @@
                                                 </div>
                                                 <div class="form-group input-group">
                                                     <div class="fixed">
-                                                        <input name="send-copy" id="remember-me" type="checkbox" value="1" checked>
+                                                        <input name="remember-me" id="remember-me" type="checkbox" value="1" checked>
                                                     </div>
-                                                    <label for="send-copy">
+                                                    <label for="remember-me">
                                                         Запомнить меня
                                                     </label>
                                                 </div>
@@ -535,7 +542,7 @@
                                                 <span>О сайте</span>
                                             </a>
                                         </li>
-                                        <li class="active">
+                                        <li>
                                             <a href="category.html">
                                                 <span>Автоистория</span>
                                                 <i class="fa fa-angle-down open-dropdown"></i>
