--- a/app/index.html
+++ b/app/index.html
@@ -209,6 +209,14 @@
                                                 <div class="form-group" title="Повтор пароля *">
                                                     <input name="password_confirmation" type="password" placeholder="Повтор пароля *">
                                                 </div>
+                                                <div class="form-group input-group">
+                                                    <div class="fixed">
+                                                        <input name="agree-with-terms" id="agree-with-terms" type="checkbox" value="1" checked>
+                                                    </div>
+                                                    <label for="agree-with-terms">
+                                                        Я соглашаюсь с <a href="#">правилами сайта</a>
+                                                    </label>
+                                                </div>
                                                 <button class="button small-button accent-button m-r-10" type="button">
                                                     <i class="fa fa-user-plus"></i>
                                                     Зарегистрироваться
