Вопрос (не доделан). Поиск. Исправления стилей (подправить отступы на блоге).

--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                         <div class="col-md-12">
                             <div class="pull-left hidden-xs hidden-sm">
                                 <div class="pull-left m-r-25 hidden-md">
-                                    <a href="#">Регистрируйтесь</a>, чтобы:
+                                    Регистрируйтесь, чтобы:
                                 </div>
                                 <ul class="pull-left">
                                     <li>
