--- a/app/questions.html
+++ b/app/questions.html
@@ -854,6 +854,14 @@
                                                     Автомобиль тот же - ВАЗ-2106 ;)
                                                 </p>
                                             </div>
+                                            <div class="delimiter delimiter-dashed">
+                                                <div class="link">
+                                                    <a href="question.html">
+                                                        <span>Читать далее</span>
+                                                        <i class="fa fa-long-arrow-right"></i>
+                                                    </a>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="answers-count" title="Количество ответов">
                                             <a href="question.html#answers">
