--- a/app/profile.html
+++ b/app/profile.html
@@ -119,46 +119,6 @@
 
     <div id="panel" class="user-profile">
         <header>
-            <!--Для незарегистрированных пользователей-->
-            <!--<div id="header-widget" class="dark-section">-->
-            <!--<div class="container-fluid">-->
-            <!--<div class="row">-->
-            <!--<div class="col-md-12">-->
-            <!--<div class="pull-left hidden-xs hidden-sm">-->
-            <!--<div class="pull-left m-r-25 hidden-md">-->
-            <!--<a href="#">Регистрируйтесь</a>, чтобы:-->
-            <!--</div>-->
-            <!--<ul class="pull-left">-->
-            <!--<li>-->
-            <!--<i class="fa fa-question"></i>-->
-            <!--<span class="visible-lg">задавать вопросы,</span>-->
-            <!--<span class="visible-md">Задавйте вопросы,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-file-text"></i>-->
-            <!--<span class="visible-lg">писать статьи,</span>-->
-            <!--<span class="visible-md">пишите статьи,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-comments"></i>-->
-            <!--<span class="visible-lg">общаться с пользователями,</span>-->
-            <!--<span class="visible-md">общайтесь с пользователями,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-gift"></i>-->
-            <!--<span class="visible-lg">получать призы!</span>-->
-            <!--<span class="visible-md">получайте призы!</span>-->
-            <!--</li>-->
-            <!--</ul>-->
-            <!--</div>-->
-
-            <!--<div class="pull-right">-->
-            <!--<i class="fa fa-user"></i><a href="#" class="m-r-5">Войти</a>/<a href="#" class="m-l-5">Зарегистрироваться</a>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
 
             <!--Для зарегистрированных пользователей-->
             <div id="header-widget" class="dark-section">
@@ -769,42 +729,47 @@
                                     </p>
                                 </div>
 
-                                <div class="title">
-                                    <h3>Награды</h3>
-                                    <div class="small-description">
-                                        <a href="#">Как получить награду?</a>
-                                    </div>
-                                </div>
-
-                                <div class="user-awards">
-                                    <a href="#" class="item" title="Лучший знаток 2015 года">
-                                        <img src="img/uploads/awards/pisatel-goda.png" alt="">
-                                    </a>
-                                    <a href="#" class="item" title="Лучший писатель 2015 года">
-                                        <img src="img/uploads/awards/znatok-goda.png" alt="">
-                                    </a>
-                                    <a href="#" class="item" title="Лучший комментатор августа 2015 года">
-                                        <img src="img/uploads/awards/kommentator-mesyatsa.png" alt="">
-                                    </a>
-                                </div>
-
-                                <div class="widget user-balance-widget">
-                                    <div class="title">
-                                        <h3>Мой баланс</h3>
-                                        <div class="small-description">
-                                            <a href="#">Что это?</a>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="widget user-balance-widget">
+                                            <div class="title">
+                                                <h3>Мой баланс</h3>
+                                                <div class="small-description">
+                                                    <a href="#">Что это?</a>
+                                                </div>
+                                            </div>
+                                            <div class="user-balance">
+                                                <span class="count">2 134</span>
+                                                <span>балла</span>
+                                            </div>
+                                            <div class="buttons">
+                                                <a href="#" class="button accent-button">Пополнить баланс</a>
+                                                <a href="#" class="button default-button">Выбрать сувенир</a>
+                                            </div>
+                                            <div class="small-description">
+                                                <a href="#">Как заработать рейтинг и получить баллы?</a>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="user-balance">
-                                        <span class="count">2 134</span>
-                                        <span>балла</span>
-                                    </div>
-                                    <div class="buttons">
-                                        <a href="#" class="button accent-button">Пополнить баланс</a>
-                                        <a href="#" class="button default-button">Выбрать сувенир</a>
-                                    </div>
-                                    <div class="small-description">
-                                        <a href="#">Как заработать рейтинг и получить баллы?</a>
+                                    <div class="col-md-6">
+                                        <div class="title">
+                                            <h3>Награды</h3>
+                                            <div class="small-description">
+                                                <a href="#">Как получить награду?</a>
+                                            </div>
+                                        </div>
+
+                                        <div class="user-awards">
+                                            <a href="#" class="item" title="Лучший знаток 2015 года">
+                                                <img src="img/uploads/awards/pisatel-goda.png" alt="">
+                                            </a>
+                                            <a href="#" class="item" title="Лучший писатель 2015 года">
+                                                <img src="img/uploads/awards/znatok-goda.png" alt="">
+                                            </a>
+                                            <a href="#" class="item" title="Лучший комментатор августа 2015 года">
+                                                <img src="img/uploads/awards/kommentator-mesyatsa.png" alt="">
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </section>
