--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -119,46 +119,6 @@
 
     <div id="panel">
         <header>
-            <!--Для незарегистрированных пользователей-->
-            <!--<div id="header-widget" class="dark-section">-->
-            <!--<div class="container-fluid">-->
-            <!--<div class="row">-->
-            <!--<div class="col-md-12">-->
-            <!--<div class="pull-left hidden-xs hidden-sm">-->
-            <!--<div class="pull-left m-r-25 hidden-md">-->
-            <!--<a href="#">Регистрируйтесь</a>, чтобы:-->
-            <!--</div>-->
-            <!--<ul class="pull-left">-->
-            <!--<li>-->
-            <!--<i class="fa fa-question"></i>-->
-            <!--<span class="visible-lg">задавать вопросы,</span>-->
-            <!--<span class="visible-md">Задавйте вопросы,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-file-text"></i>-->
-            <!--<span class="visible-lg">писать статьи,</span>-->
-            <!--<span class="visible-md">пишите статьи,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-comments"></i>-->
-            <!--<span class="visible-lg">общаться с пользователями,</span>-->
-            <!--<span class="visible-md">общайтесь с пользователями,</span>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<i class="fa fa-gift"></i>-->
-            <!--<span class="visible-lg">получать призы!</span>-->
-            <!--<span class="visible-md">получайте призы!</span>-->
-            <!--</li>-->
-            <!--</ul>-->
-            <!--</div>-->
-
-            <!--<div class="pull-right">-->
-            <!--<i class="fa fa-user"></i><a href="#" class="m-r-5">Войти</a>/<a href="#" class="m-l-5">Зарегистрироваться</a>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
 
             <!--Для зарегистрированных пользователей-->
             <div id="header-widget" class="dark-section">
@@ -557,7 +517,7 @@
                             </li>
                         </ul>
 
-                        <h2 class="responsive-block p-r-25">Карта сайта</h2>
+                        <h2 class="responsive-block">Карта сайта</h2>
 
                         <div class="text page-text">
                             <p>
