--- a/app/award.html
+++ b/app/award.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Награды - Avtorem.info</title>
+	<title>Награда - Avtorem.info</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -514,9 +514,13 @@
                                 <a href="index.html" itemprop="item"><span itemprop="name">Главная</span></a>
                                 <meta itemprop="position" content="1">
                             </li>
+                            <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+                                <a href="awards.html" itemprop="item"><span itemprop="name">Награды</span></a>
+                                <meta itemprop="position" content="2">
+                            </li>
                         </ul>
 
-                        <h2 class="responsive-block">Награды</h2>
+                        <h2 class="responsive-block">Награда "Название награды"</h2>
 
                         <div class="text page-text">
                             <a class="fancybox pull-left" data-fancybox-group="group-content" href="http://www.avtorem.info/uploads/pages/13/origin_nagradu.jpg">
